<resources>
    <string name="sign_in">Connexion</string>
    <string name="to_sign_in">Se connecter</string>
    <string name="password">Mot de passe</string>
    <string name="email">E-mail</string>
    <string name="sign_up">Inscription</string>
    <string name="to_sign_up">S\'inscrire</string>
    <string name="last_name">Nom de famille</string>
    <string name="first_name">Prénom</string>
    <string name="phone_number">Numéro de téléphone</string>
    <string name="male">Homme</string>
    <string name="female">Femme</string>
    <string name="birthday_date">Date de naissance</string>
    <string name="address_line_one">Adresse Ligne 1</string>
    <string name="address_line_two">Adresse Ligne 2</string>
    <string name="city">Ville</string>
    <string name="postal_code">Code postal</string>
    <string name="villas">Villas</string>
    <string name="beds">lits</string>
    <string name="square_metre">m²</string>
    <string name="persons">personnes</string>
    <string name="equipments">Équipements</string>
    <string name="reservation">Réservation</string>
    <string name="number_of_adults">Nombre d\'adultes</string>
    <string name="number_of_children">Nombre d\'enfants</string>
    <string name="number_of_babies">Nombre de bébés</string>
    <string name="book">Réserver</string>
    <string name="app_name">Royal Garden Villas</string>
    <string name="hello_message">Bonjour %s</string>
    <string name="not_empty_value">Les données ne peuvent pas être vide.</string>
    <string name="welcome_message">Bienvenue %s</string>
    <string name="services">Services</string>
    <string name="extras">Extras</string>
</resources>
